# fuzz_crate

./: README.md
calamine/fuzz/: Cargo.toml
calamine/fuzz/fuzz_targets/: fuzz_all.rs
claxon/fuzz/: Cargo.toml
claxon/fuzz/fuzzers/: decode_full.rs  decode_header.rs  decode_single_block.rs  diff.rs
rust-smallvec/fuzz/: Cargo.toml
rust-smallvec/fuzz/fuzz_targets/: smallvec_ops.rs
rustls/fuzz/: Cargo.toml
rustls/fuzz/fuzzers/: client_new.rs  deframer_new.rs  fragment_new.rs  message_new.rs  persist_new.rs  server_new.rs
